2019-12-06  Jakub Jelinek  <jakub@redhat.com>

	* common.opt (fprofile-partial-training): Terminate description with
	full stop.

2019-12-05  Martin Sebor  <msebor@redhat.com>

	PR middle-end/92622
	* tree-vrp.c (vrp_prop::check_array_ref): Avoid using a variable
	left uninitialized by get_addr_base_and_unit_offset on failure.

2019-12-05  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-prop.c (ipa_set_jf_unknown): Do not clear bits and m_vr.
	(detect_type_change_from_memory_writes): Remoe parameter JFUNC.
	(detect_type_change): Likewise.
	(detect_type_change_ssa): Likewise.
	(ipa_analyze_virtual_call_uses): Update.

2019-12-05  Sandra Loosemore  <sandra@codesourcery.com>

	* config/nios2/linux.h (LINK_EH_SPEC): Define.

2019-12-05  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-inline-transform.c (inline_call): Fix maintenatnce of comdat_local

2019-12-05  Jan Hubicka  <hubicka@ucw.cz>

	* cgraphclones.c (localize_profile): New function.
	(cgraph_node::create_clone): Use it for partial profiles.
	* common.opt (fprofile-partial-training): New flag.
	* doc/invoke.texi (-fprofile-partial-training): Document.
	* ipa-cp.c (update_profiling_info): For partial profiles do not
	set function profile to zero.
	* profile.c (compute_branch_probabilities): With partial profile
	watch if edge count is zero and turn all probabilities to guessed.
	(compute_branch_probabilities): For partial profiles do not apply
	profile when entry count is zero.
	* tree-profile.c (tree_profiling): Only do value_profile_transformations
	when profile is read.

2019-12-05  Sudakshina Das  <sudi.das@arm.com>

	* tree-vect-loop.c (vect_model_reduction_cost): Remove reduction_type
	check from if condition.

2019-12-05  Tobias Burnus  <tobias@codesourcery.com>

	* omp-low.c (lower_omp_target): For use_device_ptr/use_derice_addr
	and Fortran's optional arguments, unconditionally add the is-present
	condition before the libgomp call.

2019-12-05  Richard Sandiford  <richard.sandiford@arm.com>

	PR middle-end/92768